<resources>
    <string name="app_name">Tri Polarcon</string>
    <string name="icon_title">Tri Polarcon</string>
    <string name="login_title">Login</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="icon_home">home icon</string>
    <string name="profile_icon">profile icon</string>
    <string name="title_home">Home</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="phone_no">Phone</string>
    <string name="mobile_no">Mobile</string>
    <string name="gstin">GSTIN</string>
    <string name="state">State</string>
    <string name="web_site">Web site</string>
    <string name="email">Email</string>
    <string name="lead_details">Lead Information</string>
    <string name="lead_information">Lead Information</string>
    <string name="order_as_service">Trading</string>
    <string name="lead_title">Leads</string>
    <string name="Fax_no">Fax </string>
    <string name="Person_name">Person Name</string>
    <string name="Person_number">Person Number</string>
    <string name="note">Note</string>
    <string name="note_available">N/A</string>
    <string name="show_more">show_more</string>
    <string name="trading_info">Trading Details</string>
    <string name="tradingDate">Date</string>
    <string name="tradingBrandName">Brand name</string>
    <string name="tradingProductName">Product name</string>
    <string name="tradingSourceType">Source type</string>
    <string name="tradingStatus">Status</string>
    <string name="tradingAction">Action</string>
    <string name="tradingFollowUp">Follow up</string>
    <string name="tradingRequirementRemark">Requirement remark</string>
    <string name="tradingAssignTo">Assign to</string>
    <string name="Person_note">Note</string>
    <string name="tradingGeneratedBy">Generated by</string>
    <string name="trading_service">Trading service</string>
    <string name="tradingOrderDescription">Order Description</string>
    <string name="tradingArea">Area</string>
    <string name="tradingUnit">Unit</string>
    <string name="leads">Leads</string>
    <string name="edit_log">Edit Log</string>
    <string name="add_log_detail">Add Log</string>
    <string name="AddLogSchedule">Schedule</string>
    <string name="AddLogDate">Date</string>
    <string name="AddLogTime">Time</string>
    <string name="AddLogRemark">Remark</string>
    <string name="date_formate">DD/MM/YY</string>
    <string name="choose">Choose</string>
    <string name="time_formate">HH/MM</string>
    <string name="show_log_detail">Show log</string>
    <string name="order_details">Order details</string>
    <string name="Enquiry_status">Status</string>
    <string name="Enquiry_source">Source</string>
    <string name="AddLogCallType">Call Type</string>
    <string name="AddLogStatus">Status</string>
    <string name="strEnquiry">Enquiry</string>
    <string name="strEnquiryTime">Time</string>
    <string name="strEnquiryScheduleType">ScheduleType</string>
    <string name="strEnquiryLocation">Location</string>
    <string name="AddLogPhoto">Photo</string>
    <string name="upload">UPLOAD</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="connection_error">No Internet Connection !</string>
    <string name="data_not_found">No data available !</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="strEnquiryList">Enquiry List</string>
    <string name="strNewEnquiry">New Enquiry</string>
    <string name="strNotification">Notification</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_designation">Designation</string>
    <string name="cityName">City</string>
    <string name="PAN_Number">PAN</string>
    <string name="GST_Number">GST</string>
    <string name="FAX_Number">FAX</string>
    <string name="Source_Online">Online</string>
    <string name="Source_Offline">Offline</string>
    <string name="Source">Source</string>
    <string name="strCreateEnquiry">Create Enquiry</string>
    <string name="generate_lead">Generate Lead</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="edit_trading_details">Trading details</string>
    <string name="tradingRemark">Remark</string>
    <string name="imaDescription">ImgInfo</string>
    <string name="txtDetails">View Details</string>
    <string name="generate_lead_title">Do want to add Trading details ?</string>
    <string name="dialog_message">Fill up Trading and Trading Service details information.</string>
    <string name="dummy_long_text">
		We challenged ourselves to create a visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is material design. This spec is a living document that will be updated as we continue to develop the tenets and specifics of material design.
	</string>
    <string name="date_formate_demo">20/03/2018 11:00 PM</string>
    <string name="menu_search">Search</string>
    <string name="AddLogGenerated">Generated by</string>
    <string name="progress_dialog">Please wait</string>
    <string name="please_wait">Singing..</string>
    <string name="generate_log">Generating log...</string>
    <string name="create_lead">Creating lead...</string>
</resources>
