<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ebc003.tripolarcon.app.activities.ActivityGenerateLog">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_log_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarTheme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/PopupTheme"/>

    <ProgressBar
        android:id="@+id/progressBarAddLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_log_detail"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey_500"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/linearAddLogSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txtAddLogSchedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddLogSchedule"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:padding="10dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinAddLogSchedule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/note_available"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAddLogDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txtAddLogDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddLogDate"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editAddLogDtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColorEarthquakeLocation"
            android:hint="@string/date_formate"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btnDtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAddLogTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txtAddLogTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorEarthquakeLocation"
            android:text="@string/AddLogTime"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editAddLogTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginTop="10dp"
            android:hint="@string/time_formate"
            android:padding="10dp"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/btnTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAddLogCallType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txtAddLogCallType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddLogCallType"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:padding="10dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinAddLogCallType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/note_available"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAddLogStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAddLogStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/AddLogStatus"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinAddLogStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/note_available"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAddLogRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txtAddLogRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AddLogRemark"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColorEarthquakeLocation"
            android:padding="10dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editAddLogRemark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:theme="@style/Divider"/>

</LinearLayout>
