<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    tools:context="com.example.ebc003.tripolarcon.app.activities.ActivityLogin">

    <ProgressBar
        android:id="@+id/loginProgressbar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginProgressbar"
        android:layout_marginBottom="20dp"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/primaryDarkColor"
        android:textSize="25sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/hintEmail"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/hintPassword"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login_button"
            android:background="@color/btnBackground"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="onHomePage"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"/>

</android.support.constraint.ConstraintLayout>
