<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primaryTextColor"
    tools:context=".app.activities.ActivityLogDetailView">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBarLogView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />
                <ImageView
                    android:id="@+id/notificationImg"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/nav_back_img"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/add_log_detail"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogSchedule"/>
                    <TextView
                        android:id="@+id/logViewSchedule"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogDate"/>
                    <TextView
                        android:id="@+id/logViewDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogCallType"/>
                    <TextView
                        android:id="@+id/logViewCallType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogStatus"/>
                    <TextView
                        android:id="@+id/logViewCallBack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogRemark"/>
                    <TextView
                        android:id="@+id/logViewRemark"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AddLogGenerated"/>
                    <TextView
                        android:id="@+id/logViewGeneratedBy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/note_available"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>